Added dind service to gitlab file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,11 @@ variables:
 stages:
   - docker-auth
 
+services:
+  - docker:dind
+
 setup:
+  image: docker:latest
   stage: docker-auth
   script:
     - echo "commit sha " $SHA
