--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ client-build:
   stage: docker
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t "$CI_REGISTRY_IMAGE":latest -t "$CI_REGISTRY_IMAGE":$CI_COMMIT_SHA -f ./client/Dockerfile ./client
-    - docker push "$CI_REGISTRY_IMAGE":$CI_COMMIT_SHA
+    - docker build -t "$CI_REGISTRY_CLIENT_IMAGE":latest -t "$CI_REGISTRY_CLIENT_IMAGE":$CI_COMMIT_SHA -f ./client/Dockerfile ./client
+    - docker push "$CI_REGISTRY_CLIENT_IMAGE":$CI_COMMIT_SHA
 
 #server-build:
 #  stage: docker
