--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,22 +11,22 @@ client-build:
   stage: docker
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t "$CI_REGISTRY_CLIENT_IMAGE:latest" -t "$CI_REGISTRY_CLIENT_IMAGE:$CI_COMMIT_SHA" -f ./client/Dockerfile ./client
-    - docker push "$CI_REGISTRY_CLIENT_IMAGE:$CI_COMMIT_SHA"
+    - docker build -t "$CLIENT_IMAGE_NAME:latest" -t "$CLIENT_IMAGE_NAME:$CI_COMMIT_SHA" -f ./client/Dockerfile ./client
+    - docker push "$CLIENT_IMAGE_NAME:$CI_COMMIT_SHA"
 
-#server-build:
-#  stage: docker
-#  script:
-#    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-#    - docker build -t "$CI_REGISTRY_SERVER_IMAGE:latest -t $CI_REGISTRY_SERVER_IMAGE:$CI_COMMIT_SHA -f ./server/Dockerfile ./server
-#    - docker push $CI_REGISTRY_SERVER_IMAGE:$CI_COMMIT_SHA
+server-build:
+  stage: docker
+  script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker build -t "$SERVER_IMAGE_NAME:latest" -t "$SERVER_IMAGE_NAME:$CI_COMMIT_SHA" -f ./server/Dockerfile ./server
+    - docker push "$SERVER_IMAGE_NAME:$CI_COMMIT_SHA"
 
-#worker-build:
-#  stage: docker
-#  script:
-#    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-#    - docker build -t rchauhan9/multi-worker:latest -t rchauhan9/multi-worker:$CI_COMMIT_SHA -f ./worker/Dockerfile ./worker
-#    - docker push rchauhan9/multi-worker:$CI_COMMIT_SHA
+worker-build:
+  stage: docker
+  script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker build -t "$WORKER_IMAGE_NAME:latest" -t "$WORKER_IMAGE_NAME:$CI_COMMIT_SHA" -f ./worker/Dockerfile ./worker
+    - docker push "$WORKER_IMAGE_NAME:$CI_COMMIT_SHA"
 
 k8s-deploy:
   stage: k8s-deploy
