--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,40 @@
 image: docker:latest
 
 stages:
-  - docker
+#  - docker
   - k8s-deploy
 
 services:
   - docker:dind
 
-client-build:
-  stage: docker
-  script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t "$CLIENT_IMAGE_NAME:latest" -t "$CLIENT_IMAGE_NAME:$CI_COMMIT_SHA" -f ./client/Dockerfile ./client
-    - docker push "$CLIENT_IMAGE_NAME:$CI_COMMIT_SHA"
-
-server-build:
-  stage: docker
-  script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t "$SERVER_IMAGE_NAME:latest" -t "$SERVER_IMAGE_NAME:$CI_COMMIT_SHA" -f ./server/Dockerfile ./server
-    - docker push "$SERVER_IMAGE_NAME:$CI_COMMIT_SHA"
-
-worker-build:
-  stage: docker
-  script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t "$WORKER_IMAGE_NAME:latest" -t "$WORKER_IMAGE_NAME:$CI_COMMIT_SHA" -f ./worker/Dockerfile ./worker
-    - docker push "$WORKER_IMAGE_NAME:$CI_COMMIT_SHA"
+#client-build:
+#  stage: docker
+#  script:
+#    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+#    - docker build -t "$CLIENT_IMAGE_NAME:latest" -t "$CLIENT_IMAGE_NAME:$CI_COMMIT_SHA" -f ./client/Dockerfile ./client
+#    - docker push "$CLIENT_IMAGE_NAME:$CI_COMMIT_SHA"
+#
+#server-build:
+#  stage: docker
+#  script:
+#    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+#    - docker build -t "$SERVER_IMAGE_NAME:latest" -t "$SERVER_IMAGE_NAME:$CI_COMMIT_SHA" -f ./server/Dockerfile ./server
+#    - docker push "$SERVER_IMAGE_NAME:$CI_COMMIT_SHA"
+#
+#worker-build:
+#  stage: docker
+#  script:
+#    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+#    - docker build -t "$WORKER_IMAGE_NAME:latest" -t "$WORKER_IMAGE_NAME:$CI_COMMIT_SHA" -f ./worker/Dockerfile ./worker
+#    - docker push "$WORKER_IMAGE_NAME:$CI_COMMIT_SHA"
 
 k8s-deploy:
+  image: google/cloud-sdk
   stage: k8s-deploy
   script:
-    - echo "KUBERNETES DEPLOY STAGE - NOT YET IMPLEMENETED"
+    - openssl aes-256-cbc -d -a -in service-account.json.ossl -out service-account.json -pass env:OSSLPASS
+    - gcloud components update kubectl
+    - gcloud auth activate-service-account --key-file service-account.json
+    - gcloud config set project fib-k8s-300114
+    - gcloud config set compute/zone europe-west2-a
+    - gcloud container clusters get-credentials fib-cluster
