--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,6 @@ k8s-deploy:
     - gcloud container clusters get-credentials fib-cluster
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - kubectl apply -f k8s/
-    - kubectl set image deployments/server-deployment server=rchauhan9/multi-server:$SHA
-    - kubectl set image deployments/client-deployment client=rchauhan9/multi-client:$SHA
-    - kubectl set image deployments/worker-deployment worker=rchauhan9/multi-worker:$SHA
+    - kubectl set image deployments/server-deployment server=rchauhan9/multi-server:$CI_COMMIT_SHA
+    - kubectl set image deployments/client-deployment client=rchauhan9/multi-client:$CI_COMMIT_SHA
+    - kubectl set image deployments/worker-deployment worker=rchauhan9/multi-worker:$CI_COMMIT_SHA
